<resources>
    <string name="app_name">HomeWorks</string>
    <string name="remember">是否记住密码？</string>
    <string name="forget">忘记密码？</string>
    <string name="login">登录</string>
    <string name="ddl">截止时间：%1$s</string>
    <string name="begin">开始时间：%1$s</string>
    <string name="tv_assignName">%1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="myassign_colorchange_dialog_title">自定义任务底色</string>
    <string name="myassign_colorchange_dialog_cancel">取消</string>
    <string name="myassign_colorchange_dialog_check">确认</string>
</resources>
