<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tasks_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rectangle_ffffff"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:id="@+id/tasks_aitem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:background="@drawable/rounded_rectangle_039be5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="27.4286dp"
            android:layout_marginStart="18.2875dp"
            android:layout_marginTop="18.2875dp"
            android:background="@drawable/oval"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_courseassign_stutas"
                android:layout_width="11.4286dp"
                android:layout_height="11.4286dp"
                android:layout_marginStart="10.2857dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/circle" />

            <TextView
                android:id="@+id/tv_courseassign_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5.7143dp"
                android:layout_marginEnd="9.1429dp"
                android:text="进行中"
                android:textColor="@color/white"
                android:textSize="13.7143sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_assignName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18.2875dp"
            android:layout_marginTop="18.2875dp"
            android:layout_marginBottom="28.5714dp"
            android:text="@string/tv_assignName"
            android:textColor="#ffffff"
            android:textSize="18.2875sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="18.2875dp"
        android:paddingEnd="9.1429dp">

        <TextView
            android:id="@+id/tv_begin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_weight="1"
            android:text="@string/begin"
            android:textSize="13.7143sp" />

        <TextView
            android:id="@+id/tv_ddl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/ddl"
            android:textSize="13.7143sp" />
    </LinearLayout>

</LinearLayout>
