<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.LoginActivity">

    <ImageView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="116.7dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="93.3dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="93.3dp"
        android:src="@drawable/home_page" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="HomeWorks"
        android:textColor="#ff4db6ac"
        android:textSize="60px" />

    <LinearLayout
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="学号"
            android:textColor="#ff000000"
            android:textSize="48px" />

        <EditText
            android:id="@+id/et_userName"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_gravity="bottom"
            android:layout_weight="20"
            android:textSize="48px" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="密码"
            android:textColor="#ff000000"
            android:textSize="48px" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_gravity="bottom"
            android:layout_weight="20"
            android:inputType="textPassword"
            android:textSize="48px" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="296dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colormain"
        android:text="@string/login"
        android:textColor="#ffffffff"
        android:textSize="48px" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/remember"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:text="@string/remember"
            android:textColor="#ff4db6ac" />

        <TextView
            android:id="@+id/forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="31.7dp"
            android:clickable="true"

            android:text="@string/forget"
            android:textColor="#ff4db6ac"
            android:textSize="36px" />
    </RelativeLayout>

</LinearLayout>
